// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`add 1`] = `
Array [
  Array [
    "",
    Object {
      "debugObjectName": "ObservableObject@4",
      "name": "a",
      "newValue": 3,
      "object": null,
      "observableKind": "object",
      "type": "add",
    },
  ],
]
`;

exports[`array 1`] = `
Array [
  Array [
    "",
    Object {
      "added": Array [
        Object {
          "x": 1,
          Symbol(mobx administration): null,
        },
        Object {
          "x": 2,
          Symbol(mobx administration): null,
        },
      ],
      "addedCount": 2,
      "debugObjectName": "ObservableArray@10",
      "index": 1,
      "object": null,
      "observableKind": "array",
      "removed": Array [
        2,
      ],
      "removedCount": 1,
      "type": "splice",
    },
  ],
  Array [
    "1",
    Object {
      "debugObjectName": "ObservableArray@10[..]",
      "name": "x",
      "newValue": "a",
      "object": null,
      "observableKind": "object",
      "oldValue": 1,
      "type": "update",
    },
  ],
  Array [
    "2",
    Object {
      "debugObjectName": "ObservableArray@10[..]",
      "name": "x",
      "newValue": "b",
      "object": null,
      "observableKind": "object",
      "oldValue": 2,
      "type": "update",
    },
  ],
  Array [
    "3",
    Object {
      "debugObjectName": "ObservableArray@10[..]",
      "name": "x",
      "newValue": "c",
      "object": null,
      "observableKind": "object",
      "oldValue": 3,
      "type": "update",
    },
  ],
  Array [
    "",
    Object {
      "added": Array [],
      "addedCount": 0,
      "debugObjectName": "ObservableArray@10",
      "index": 0,
      "object": null,
      "observableKind": "array",
      "removed": Array [
        1,
        Object {
          "x": "a",
          Symbol(mobx administration): null,
        },
        Object {
          "x": "b",
          Symbol(mobx administration): null,
        },
      ],
      "removedCount": 3,
      "type": "splice",
    },
  ],
  Array [
    "",
    Object {
      "added": Array [
        Object {
          "x": "B",
          Symbol(mobx administration): null,
        },
      ],
      "addedCount": 1,
      "debugObjectName": "ObservableArray@10",
      "index": 1,
      "object": null,
      "observableKind": "array",
      "removed": Array [],
      "removedCount": 0,
      "type": "splice",
    },
  ],
  Array [
    "0",
    Object {
      "debugObjectName": "ObservableArray@10[..]",
      "name": "x",
      "newValue": "A",
      "object": null,
      "observableKind": "object",
      "oldValue": "c",
      "type": "update",
    },
  ],
]
`;

exports[`basic & dispose 1`] = `
Array [
  Array [
    "",
    Object {
      "debugObjectName": "ObservableObject@2",
      "name": "a",
      "newValue": 2,
      "object": Object {
        "a": 2,
        "b": Object {
          "z": 3,
          Symbol(mobx administration): null,
        },
        Symbol(mobx administration): null,
      },
      "observableKind": "object",
      "oldValue": 1,
      "type": "update",
    },
  ],
  Array [
    "b",
    Object {
      "debugObjectName": "ObservableObject@2.b",
      "name": "z",
      "newValue": 4,
      "object": Object {
        "z": 4,
        Symbol(mobx administration): null,
      },
      "observableKind": "object",
      "oldValue": 3,
      "type": "update",
    },
  ],
]
`;

exports[`cleanup 1`] = `
Array [
  Array [
    "a",
    Object {
      "debugObjectName": "ObservableObject@6",
      "name": "b",
      "newValue": 2,
      "object": Object {
        "b": 2,
        Symbol(mobx administration): null,
      },
      "observableKind": "object",
      "oldValue": 1,
      "type": "update",
    },
  ],
  Array [
    "",
    Object {
      "debugObjectName": "ObservableObject@7",
      "name": "a",
      "object": Object {
        Symbol(mobx administration): null,
      },
      "observableKind": "object",
      "oldValue": Object {
        "b": 2,
        Symbol(mobx administration): null,
      },
      "type": "remove",
    },
  ],
]
`;

exports[`deep 1`] = `
Array [
  Array [
    "a/b",
    Object {
      "debugObjectName": "ObservableObject@3.a.b",
      "name": "c",
      "newValue": 4,
      "object": null,
      "observableKind": "object",
      "oldValue": 3,
      "type": "update",
    },
  ],
]
`;

exports[`delete 1`] = `
Array [
  Array [
    "",
    Object {
      "debugObjectName": "ObservableObject@5",
      "name": "x",
      "object": null,
      "observableKind": "object",
      "oldValue": 1,
      "type": "remove",
    },
  ],
]
`;

exports[`map 1`] = `
Array [
  Array [
    "",
    Object {
      "debugObjectName": "ObservableObject@11",
      "name": "x",
      "newValue": Array [],
      "object": null,
      "observableKind": "object",
      "type": "add",
    },
  ],
  Array [
    "x",
    Object {
      "debugObjectName": "ObservableMap@12",
      "name": "a",
      "newValue": Object {
        "a": 1,
        Symbol(mobx administration): null,
      },
      "object": null,
      "observableKind": "map",
      "type": "add",
    },
  ],
  Array [
    "x/a",
    Object {
      "debugObjectName": "ObservableMap@12.a",
      "name": "a",
      "newValue": 2,
      "object": null,
      "observableKind": "object",
      "oldValue": 1,
      "type": "update",
    },
  ],
  Array [
    "x",
    Object {
      "debugObjectName": "ObservableMap@12",
      "name": "a",
      "newValue": 3,
      "object": null,
      "observableKind": "map",
      "oldValue": Object {
        "a": 2,
        Symbol(mobx administration): null,
      },
      "type": "update",
    },
  ],
  Array [
    "x",
    Object {
      "debugObjectName": "ObservableMap@12",
      "name": "a",
      "object": null,
      "observableKind": "map",
      "oldValue": 3,
      "type": "delete",
    },
  ],
]
`;
